The nice level (CPU priority) of all cron and other background jobs run by Webmin can now be set on the Advanced Options page.
---- Changes since 1.400 ----
Use the gzip -d command to extract Webmin modules, if gunzip is missing (such as on Windows).
Users with too many failed logins can be locked until the administrator unlocks them.
The default scheduled update time is now randomly selected.
---- Changes since 1.410 ----
Refresh the left-side frame when installing, removing or re-categorizing modules.
---- Changes since 1.420 ----
On Linux systems, the IO scheduling class and priority for Webmin Cron jobs can be set on the Advanced Options page.
Added a field to the SSL Encryption page for setting allowed ciphers.
---- Changes since 1.440 ----
Added an advanced option to have Webmin turn off the immutable bit on files before writing to them, and turn it back on when done.
Re-designed the Webmin Themes page to use tabs.
Added support for overlay themes, which can be selected in addition to a regular theme. An overlay typically just modifies the CSS or images in the real theme, making simple design changes easier.
Converted commands in the module's API file to POD format, and added more details about each function.
---- Changes since 1.450 ----
Added GPG verification of the updates list and modules from the Webmin update repository, when the gpg command is installed.
Expired Unix passwords can now be changed using an external command, instead of PAM or directly updating /etc/shadow. This is set on the Authentication page.
---- Changes since 1.460 ----
Detect and ignore failures when checking if other modules are installed.
---- Changes since 1.470 ----
Added a field to the Operating System and Environment page for additional Perl module directories.
---- Changes since 1.480 ----
Removed the option to select an OSDN mirror, as Sourceforge now does sensible location-based redirects automatically.