@@ -27,6 +27,7 @@ index_dall=Any change
 index_diff=Changes containing
 index_stimes=Actions on dates
 index_shost=Source Webmin server
+index_global=&lt;Not in any module&gt;
 
 search_title=Search Results
 search_date=Date
@@ -49,6 +50,9 @@ search_critt2=on $1
 search_config=Changed module configuration
 search_etime=Invalid start or end time
 search_err=Search failed
+search_global=None
+search_global_login=Logged into Webmin
+search_global_logout=Logged out of Webmin
 
 view_title=Action Details
 view_header=Details of logged action $1
